# founder-signals

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/exports/: diff.json  founders.csv  founders.json  graph.graphml  graph.html  graph.json
scripts/: capture_seeds.py
src/founder_signals/: capture.py  cli.py  config.py  context.py  logging_utils.py  mcp_server.py  regions.py  schema.py  store.py
src/founder_signals/pipeline/: discover.py  enrich.py  export.py  extract.py  graph.py  history.py  normalize.py  rank.py  runner.py
src/founder_signals/sources/: base.py  cached.py  ddg_search.py  linkedin_provider.py  llm_extract.py  registry.py  web_enrich.py  yc_directory.py
src/founder_signals/sources/fixtures/: founders_seed.json
tests/: test_pipeline.py
