[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-signals"
version = "0.1.0"
description = "Founder Signals CLI and MCP server for founder discovery, enrichment, ranking, and export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - Bek Ventures Case" }
authors = [{ name = "Aysu Keskin" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "ddgs>=9.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
founder-signals = "founder_signals.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
founder_signals = ["sources/fixtures/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
